first commit Receta Lemon Pie proyect

--- a/recetaLemonPie01/index.html
+++ b/recetaLemonPie01/index.html
@@ -89,12 +89,13 @@
         </section>
         <!-- Final section Instrucciones -->
     </main>
+    <!-- Comienzo Footer -->
     <footer>
         <hr>
         <p align="center">
             Todos los derechos reservados.
         </p>
     </footer>
-    
+    <!-- Final Footer -->
 </body>
 </html>
