first commit card proyect

--- a/recetaLemonPie01/index.html
+++ b/recetaLemonPie01/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Receta de Lemon Pie</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <!-- Comienzo del header -->
@@ -26,8 +28,7 @@
     <!-- Comienzo del main -->
     <main>
         <!-- Comienzo de section heroe -->
-        <section>
-            <img src="./img/lemon-pie 2.jpg" alt="imagen-lemon-pie">
+        <section class="heroe">
             <h1 style="font-size: 48px;">El clásico Lemon Pie</h1>
                 <p>
                     Es el preferido de los que les gusta lo dulce pero no lo empalagoso. El lemon pie es una tarta, es decir, una base de masa y un relleno. Como su nombre lo indica, está hecha con jugo de limón, azúcar y huevos. Todo eso mezclado hace el famoso custard, el relleno cremoso amarillo que es tan típico del lemon pie.
@@ -37,7 +38,7 @@
 
         <!-- Comienzo section ingredientes -->
         <section>
-            <h2>Ingredientes</h2>
+            <h2><i class="fas fa-birthday-cake pie"></i>Ingredientes</h2>
                 <p>
                     Para la masa
                 </p> 
