--- a/petshop/index.html
+++ b/petshop/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Petshop Front Cat&Dog</title>
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;">
     <!-- Comienzo del header -->
